--- a/prometheus-values.yaml
+++ b/prometheus-values.yaml
@@ -12,38 +12,21 @@ data:
       evaluation_interval: 5s
     scrape_configs:
 
-      - job_name: 'kubernetes-cadvisor'
-        scheme: http
+      - job_name: "daemonset_cadvisor"
         kubernetes_sd_configs:
-        - api_servers:
-          - https://kubernetes.default.svc
-          in_cluster: true
-          role: node
-
+        - role: pod
         relabel_configs:
+        - source_labels: [__meta_kubernetes_pod_label_app]
+          action: keep
+          regex: cadvisor
         - action: labelmap
-          regex: __meta_kubernetes_node_label_(.+)
-        # Use cadvisor 4194 port
-        - source_labels: [__address__]
-          regex: '(.*):10250'
-          replacement: '${1}:4194'
-          target_label: __address__
-
-        # Backward compatibility for Kubernetes 1.3 dashboards
-        metric_relabel_configs:
-        - source_labels: [io_kubernetes_container_name,container_name]
+          regex: __meta_kubernetes_pod_label_(.+)
+        - source_labels: [__meta_kubernetes_namespace]
           action: replace
-          regex: (.*);(.*)
-          replacement: '${1}${2}'
-          target_label: io_kubernetes_container_name
-        - source_labels: [kubernetes_pod_name,pod_name]
+          target_label: namespace
+        - source_labels: [__meta_kubernetes_pod_name]
           action: replace
-          regex: (.*);(.*)
-          replacement: '${1}${2}'
-          target_label: kubernetes_pod_name
-        - source_labels: [kubernetes_pod_name]
-          action: replace
-          target_label: io_kubernetes_pod_name
+          target_label: pod
 
       - job_name: 'ingress-nginx-endpoints'
         kubernetes_sd_configs:
